vbnc/vbnc/tests/Errors/30125.vb
Public Class SomeClass
    Public WriteOnly Property Prop As Integer
    End Property
End Class